--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dice Game</title>
+    <title>Throwing 1 Die</title>
 </head>
-<body>
+<body onLoad ="init();">
     <canvas id="canvas" width="400" height ="300">
     Your browser doesn't support the HTML5 canvas
     </canvas>
+  <script src="index.js"></script>
 </body>
 </html>
